<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lap"
    tools:context=".backs">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="374dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bicycle_hub_bulkhead_on_bulk_bearings_back_sleeve_layout"
            android:textColor="@color/black"
            android:background="#2196F3"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/yow"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="@string/yoh"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>

</ScrollView>